--- a/EpiSimdemics.cabal
+++ b/EpiSimdemics.cabal
@@ -7,11 +7,11 @@ cabal-version: 1.12
 name:           EpiSimdemics
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/EpiSimdemics#readme>
-homepage:       https://github.com/githubuser/EpiSimdemics#readme
-bug-reports:    https://github.com/githubuser/EpiSimdemics/issues
-author:         Author name here
+homepage:       https://github.com/aschreiber1/episimdemics#readme
+bug-reports:    https://github.com/aschreiber1/episimdemics/issues
+author:         Andrew Schreiber
 maintainer:     example@example.com
-copyright:      2021 Author name here
+copyright:      2021 Andrew Schreiber
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/EpiSimdemics
+  location: https://github.com/aschreiber1/episimdemics
 
 library
   exposed-modules:
