--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                EpiSimdemics
 version:             0.1.0.0
-github:              "githubuser/EpiSimdemics"
+github:              "aschreiber1/episimdemics"
 license:             BSD3
-author:              "Author name here"
+author:              "Andrew Schreiber"
 maintainer:          "example@example.com"
-copyright:           "2021 Author name here"
+copyright:           "2021 Andrew Schreiber"
 
 extra-source-files:
 - README.md
