--- a/EpiSimdemics.cabal
+++ b/EpiSimdemics.cabal
@@ -32,6 +32,7 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , containers
     , split
   default-language: Haskell2010
 
@@ -45,6 +46,7 @@ executable EpiSimdemics-exe
   build-depends:
       EpiSimdemics
     , base >=4.7 && <5
+    , containers
     , split
   default-language: Haskell2010
 
@@ -59,5 +61,6 @@ test-suite EpiSimdemics-test
   build-depends:
       EpiSimdemics
     , base >=4.7 && <5
+    , containers
     , split
   default-language: Haskell2010
