--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -eventlog
     dependencies:
     - EpiSimdemics
 
@@ -46,5 +47,6 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -eventlog
     dependencies:
     - EpiSimdemics
