--- a/EpiSimdemics.cabal
+++ b/EpiSimdemics.cabal
@@ -33,6 +33,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , parallel
     , split
   default-language: Haskell2010
 
@@ -42,11 +43,12 @@ executable EpiSimdemics-exe
       Paths_EpiSimdemics
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -eventlog
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -eventlog -threaded
   build-depends:
       EpiSimdemics
     , base >=4.7 && <5
     , containers
+    , parallel
     , split
   default-language: Haskell2010
 
@@ -57,10 +59,11 @@ test-suite EpiSimdemics-test
       Paths_EpiSimdemics
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -eventlog
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -eventlog -threaded
   build-depends:
       EpiSimdemics
     , base >=4.7 && <5
     , containers
+    , parallel
     , split
   default-language: Haskell2010
