--- a/EpiSimdemics.cabal
+++ b/EpiSimdemics.cabal
@@ -43,7 +43,7 @@ executable EpiSimdemics-exe
       Paths_EpiSimdemics
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -eventlog -threaded
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -eventlog -threaded -Wall
   build-depends:
       EpiSimdemics
     , base >=4.7 && <5
