--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .stack-work/
 *~
 EpiSimdemics-exe.eventlog
-EpiSimdemics-exe-70.eventlog
+EpiSimdemics-exe-69.eventlog
+dataset-main.csv
+people-main.csv
